--- a/example/throughput.yml
+++ b/example/throughput.yml
@@ -1,10 +1,36 @@
 ---
 
-concurrency: 50
 base: 'http://localhost:9000'
-iterations: 1000
+concurrency: 500
+iterations: 40
 
 plan:
   - name: Fetch users
     request:
       url: /api/users.json
+
+# concurrency: 20
+# iterations: 1000
+# Concurrency Level         20
+# Time taken for tests      3.2 seconds
+
+# concurrency: 10
+# iterations: 2000
+# Concurrency Level         10
+# Time taken for tests      6.8 seconds
+
+# concurrency: 100
+# iterations: 200
+# Concurrency Level         100
+# Time taken for tests      2.3 seconds
+
+# concurrency: 1000
+# iterations: 20
+# Concurrency Level         1000
+# Time taken for tests      4.0 seconds
+
+# concurrency: 10000
+# iterations: 2
+# Concurrency Level         10000
+# Time taken for tests      34.0 seconds
+# Total requests            20000
